--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,6 @@ jobs:
    with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
-          publish_branch: main  # Cambiamo da gh-pages a main
+       publish_branch: main # Cambiato da gh-pages a main
+          force_modify_gitpass: true
          
